--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 
     <label for="userInput">Which one would you pick?</label>
     <input type="text" name="userInput" id="userInput">
-    
+
     <button type="submit" >Let's PLAY</button>
 
 </form>
+
+<div id="result" class="hidden">
+<p>the result for this round is:</p>
+<p id="final-result">temporary-answer</p>
+</div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
